--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,22 +1,33 @@
+
 .req{
-    position:absolute;
-width:281.92px;
-height: 57.16px;
-left: 55px;
-top: 254px;
+    position: absolute;
+width: 238px;
+height: 45.9px;
+left: 46px;
+top: 277px;
 }
 .track{
-    position:absolute;
-width:281.92px;
-height: 57.16px;
-left: 55px;
-top: 321px;
+    position: absolute;
+    width: 237.81px;
+    height: 50.18px;
+    left: 46.19px;
+    top: 334.43px;
 }
 .feed{
-    position:absolute;
-width:281.92px;
-height: 57.16px;
-left: 54.81px;
-top: 399.56px;
+    position: absolute;
+width: 240.1px;
+height: 51.43px;
+left: 46px;
+top: 399.57px;
 }
-
+.button1 {
+    background-color: white; 
+    color: black; 
+    border: 2px solid #008CBA;
+  }
+  
+  .button1:hover {
+    background-color: #4CAF50;
+    color: white;
+  }
+ 
