--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,51 +1,1 @@
-<html>
-<head>
-  <style>
-  h1{text-align: center;}
-  </style>
-</head>
-
-
- 
-  <h1>SEND REQUEST</h1>
-  <h2>Staff Dashboard</h2>
-  <button class="req " type="click">Request</button>
-  <button class="track " type="click">Tracking</button>
-  <button class="feed" type="click">Feedback</button>
-
-
-<form style="text-align: center">
-  <div class="container">
-  <div>
-    <label>Staff No</label>
-    <input class="staff" type="text" name="staffno">
-  </div>
-  <label>Staff Name</label>
-  <input class="name" type="text" name="name">
-  <div>
-  <label>Email</label>
-  <input class="email" type="text" name="email">
-  </div>
-  <div>
-  <label>Venue</label>
-  <input class="venue" type="text" name="venue">
-  </div>
-  <div>
-    <label>Description</label>
-    <input class="des"type="text" name="des">
-  </div>
-  <div>
-    <label>Category</label>
-    <select class="cat" id="category" name="category" placeholder="Choose Category">
-      <option value="soft">Software</option>
-      <option id="hard">Hardware</option>
-    </select>
-  </div>
-
-  <label>Image</label>
-  <input class="img" type="file" id="file" accept="image/*">
-<div class="center"></div>
-  <button style="text-align: center" type="click">Send</button>
-</div>
-</form>
-</html>
+<router-outlet></router-outlet>
