--- a/src/app/redirectPages/footer/footer.component.html
+++ b/src/app/redirectPages/footer/footer.component.html
@@ -1,1 +1,4 @@
-<p>footer works!</p>
+<div class="container-fluid footer">
+    <p class="center p-1">© 2023 Informatics Community Engagement Project . All Rights Reserved</p>
+</div>
+
