--- a/src/app/redirectPages/navbar/navbar.component.html
+++ b/src/app/redirectPages/navbar/navbar.component.html
@@ -1,38 +1,52 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="/assets/images/LOGO.png">TECHNICAL SERVICES</a>
+<nav class="navbar navbar-expand-lg ">
+  <!--Start of navigation section-->
+    <div class="container-fluid sticky fixed-top " >
+
+      <!--Start of logo -->
+      <h1 class="navbar-brand" routerLink=""><img src="/assets/images/LOGO.png">TECHNICAL SERVICES</h1>  
+
+      <!--End of logo-->
+
+      <!--Start of toggler -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+
+      <!--End of toggler -->
+      
+       <!--Start of navigation -->
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+
+        <!--Start of navigation links-->
+
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 nav" >
+          <li  class="nav-item">
+            <a  class="nav-link "  href="">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="">SendRequest</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
+         
           <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
+            <a class="nav-link " routerLink="viewrequest">RequestProgress</a>
           </li>
         </ul>
+
+        <!--End  of navigation links-->
+
+        <!--Start of search Section-->
         <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+          <input class="form-control me-2 " type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-primary" type="submit">Search</button>
         </form>
+
+        <!--End of search Section-->
       </div>
+
+      <!--End of navigation section-->
     </div>
+
+    <!--End of navigation section-->
   </nav>
 
   
