--- a/src/app/request/request.component.css
+++ b/src/app/request/request.component.css
@@ -1,220 +1,158 @@
-.blue {
-    background-color: 
-    #005596;
-
+html {
+    background-image: url("src/assets/technical-support-center-customer-service-internet-business-technology-concept-136383159.jpg");
+    background-size: cover;
+    height: 896px;
+    left: 0px;
+    top: 71px;
 }
 
-
-.track{
-    position: absolute;
-width: 161px;
-height: 30px;
-left: 166px;
-top: 356px;
-
-font-family: 'Sansation';
-font-style: normal;
-font-weight: 400;
-font-size: 32px;
-line-height: 36px;
-letter-spacing: 0.035em;
-
-color: #005596;
-
+body {
+    display: flex;
 }
-.feed{
-    position: absolute;
-width: 161px;
-height: 27px;
-left: 166px;
-top: 395px;
 
-font-family: 'Sansation';
-font-style: normal;
-font-weight: 400;
-font-size: 32px;
-line-height: 36px;
-letter-spacing: 0.035em;
-
-color: #005596;
+.side-bar {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    width: 30%;
+    margin: 284px 0;
 }
-.button1 {
-    background-color: white; 
-    color: black; 
-    border: 2px solid #008CBA;
-  }
-  
-  .button1:hover {
-    background-color: #4CAF50;
-    color: white;
-  }
 
-  .h1{
-    position: absolute;
+.class-side-bar {
+    font-family: 'Sansation';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 36px;
+    letter-spacing: 0.035em;
+    color: #005596;
+    margin: 10px 0;
+    border: none;
+    background-color: white;
+}
+
+.container {
+width: 80%;
+left: 409px;
+top: 149px;
+background: #FFFFFF;
+mix-blend-mode: normal;
+border: 1px solid #969090;
+box-shadow: 15px 15px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+border-radius: 10px;
+padding: 20px;
+}
+
+.border{
+    margin: auto;
+    padding: 20px;
+    height: 696px;
+    background: #FFFFFF;
+    border: 1px solid #969090;
+    box-shadow: 15px 15px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+}
+
+.h1 {
     width: 271px;
     height: 34px;
-    left: 483px;
-    top: 217px;
-    
     font-family: 'Sansation';
     font-style: normal;
     font-weight: 700;
     font-size: 32px;
     line-height: 36px;
     letter-spacing: 0.15em;
-    
     color: #000000;
-   
-    
-  }
-  .req{
-    position: absolute;
-width: 142px;
-height: 25px;
-left: 166px;
-top: 311px;
+}
 
-font-family: 'Sansation';
-font-style: normal;
-font-weight: 700;
-font-size: 32px;
-line-height: 36px;
-letter-spacing: 0.035em;
-text-decoration-line: underline;
-text-transform: capitalize;
-
-color: #005596;
-
-  }
-.category{
-    position: absolute;
+.cat {
     width: 175.32px;
     height: 37px;
-    left: 483px;
-    top: 284px;
-
-font-family: 'Sansation';
-font-style: normal;
-font-weight: 400;
-font-size: 32px;
-line-height: 36px;
-letter-spacing: 0.06em;
-
-color: #000000;
-
-transform: matrix(1, 0, 0, 1, 0, 0);
-}
-.venue{
-    position: absolute;
-width: 116.58px;
-height: 35px;
-left: 483px;
-top: 378px;
-
-font-family: 'Sansation';
-font-style: normal;
-font-weight: 400;
-font-size: 32px;
-line-height: 36px;
-/* identical to box height */
-
-letter-spacing: 0.06em;
-
-color: #000000;
-
-transform: matrix(1, 0, 0, 1, 0, 0);
-
+    font-family: 'Sansation';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 36px;
+    letter-spacing: 0.06em;
+    color: #000000;
+    transform: matrix(1, 0, 0, 1, 0, 0);
     box-sizing: border-box;
+    width: 526px;
+    height: 38px;
+    background: #FDF8F8;
+    mix-blend-mode: multiply;
+    border: 1px solid #969090;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+}
 
-position: absolute;
+
+
+.venue{
+width: 116.58px;
+top: 378px;
+font-family: 'Sansation';
+font-style: normal;
+font-weight: 400;
+font-size: 20px;
+line-height: 36px;
+letter-spacing: 0.06em;
+color: #000000;
+transform: matrix(1, 0, 0, 1, 0, 0);
+    box-sizing: border-box;
 width: 526px;
 height: 38px;
-left: 754px;
-top: 378px;
-
 background: #FDF8F8;
 border: 1px solid #969090;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
 border-radius: 10px;
+border-bottom: 2px solid black;
 }
+
 .des{
-    position: absolute;
 width: 197px;
 height: 21.24px;
-left: 483px;
-top: 489px;
-
 font-family: 'Sansation';
 font-style: normal;
 font-weight: 400;
-font-size: 32px;
+font-size: 20px;
 line-height: 36px;
 letter-spacing: 0.06em;
-
 color: #000000;
-
 transform: matrix(1, 0, 0, 1, 0, 0);
-
 box-sizing: border-box;
-
-position: absolute;
 width: 526px;
 height: 127px;
-left: 754px;
-top: 479px;
-
 background: #FDF8F8;
 border: 1px solid #969090;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
 border-radius: 10px;
+border-bottom: 2px solid black;
 }
+
 .img{
-    position: absolute;
 width: 144.36px;
 height: 24.72px;
-left: 483px;
-top: 681px;
-
 font-family: 'Sansation';
 font-style: normal;
 font-weight: 400;
-font-size: 32px;
+font-size: 20px;
 line-height: 36px;
 letter-spacing: 0.06em;
-
 color: #000000;
-
 transform: matrix(1, 0, 0, 1, 0, 0);
-position: absolute;
 width: 552.16px;
 height: 52.96px;
-left: 754px;
-top: 681px;
 }
+
 .btn{
-    position: absolute;
 width: 135px;
 height: 63.87px;
-left: 841px;
-top: 792px;
-
 background:#005596;
 border-color: #005596;
 filter: drop-shadow(10px 10px 4px rgba(0, 0, 0, 0.25));
 }
-.form{
-    position: absolute;
-width: 1004px;
-height: 772px;
-left: 409px;
-top: 149px;
 
-background: #FFFFFF;
-mix-blend-mode: normal;
-border: 1px solid #969090;
-box-shadow: 15px 15px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
-border-radius: 10px;
-}
 
 .Footer {
     position: absolute;
@@ -225,36 +163,28 @@ border-radius: 10px;
 
     background: #005596;
 }
+
 .FooterF {
     position: absolute;
     width: 2500px;
-    height: 71px;
+    height: 40px;
     left: 0px;
     top: 0px;
     
     background: #005596;
 }
 .send{
-    position: absolute;
 width: 271px;
 height: 34px;
-left: 483px;
-top: 217px;
-
 font-family: 'Sansation';
 font-style: normal;
 font-weight: 700;
 font-size: 20px;
 line-height: 36px;
 letter-spacing: 0.15em;
-
 color: #000000;
-
-position: absolute;
 width: 892px;
 height: 45px;
-left: 465px;
-top: 212px;
-
 background: #ECE7E7;
+
 }
