--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,15 @@
+
+<app-component></app-component>
+
+<!---->
 <!--navigationBar-->
-<app-navbar></app-navbar>
+<!--<app-navbar></app-navbar>-->
 
 <!--what is viewed-->
-<router-outlet></router-outlet>
+<!--<router-outlet></router-outlet>-->
 
 <!--FOOTER-->
-<app-footer></app-footer>
+<!--<app-footer></app-footer>-->
 
 
 
