--- a/src/app/component/component.component.html
+++ b/src/app/component/component.component.html
@@ -1,8 +1,24 @@
-<p>Component Works</p>
+
+<nav class= "navbar   ">
+    
+    <div class="container-fluid">
+        <a class="navbar-brand" href=""><img class = "img" src="assets/images/LogoPic.png"></a>
+        <h4 class="">Dashboard</h4>
+    </div>
+    
+</nav>
+
+
 
 <!--Start of the navigation tab body-->
 
-<body>
+<body class="relative">
+    <div class="box">
+       
+        <img class = "leftSidePolygon" src="assets/images/DashboardSvg.svg">
+        <img class = "imgLeftSidePolygon" src="assets/images/Dashboard2Svg.svg" >
+    </div>
+    
     <form action="">
 
         <form class="form2 ">
@@ -119,6 +135,12 @@
         </form>
     </form>
 
+    
 
 </body>
+
+
 <!--End of the navigation tab body-->
+
+<footer>&copy; 2023 Informatics Community Engagement Project . All Rights Reserved <p></p>
+</footer>
