--- a/src/app/pages/track-request/track-request.component.html
+++ b/src/app/pages/track-request/track-request.component.html
@@ -5,7 +5,7 @@
       <div class="container-fluid sticky fixed-top " >
   
             <!--Start of logo -->
-            <h1 class="navbar-brand" routerLink=""><img src="/assets/images/tutLogo.png"></h1>  
+            <h1 class="navbar-brand" routerLink=""><img src="/assets/images/tutLogo.png"> </h1> <P class = "center">TRACK REQUEST PAGE</P>
     
             <!--End of logo-->
       </div>
@@ -14,12 +14,15 @@
 </nav>
 <body>
     <div class = "sideNav"> 
-        <p>track-request works!</p>
-        <p>This is a side nav  RIGHTSIDE</p>
+        <nav class = "breadcrumblink" aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item active" aria-current="page">Home</li>
+            </ol>
+          </nav>
     </div>
     <div class = "contentContainerRight">
             <form class="backFrom">
-                <P>Main Content</P>
+                <h3 class = "toptitle">Staff Track Request</h3>
 
 
             </form>
