--- a/src/app/redirectPages/footer/footer.component.css
+++ b/src/app/redirectPages/footer/footer.component.css
@@ -2,11 +2,21 @@
    
     position: absolute;
     top: 100%;
-    border: 1px solid yellow;
+    background: #005596;
     height: 42px;
     margin: 238px 0;
+    padding-top: 8px;
 }
 .center {
+   
     text-align: center;
-    color: black;
+   
+    font-style: normal;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 17px;
+    /* identical to box height */
+
+    letter-spacing: 0.035em;
+    color: white;
 }
