--- a/src/app/pages/stafffeedback/stafffeedback.component.html
+++ b/src/app/pages/stafffeedback/stafffeedback.component.html
@@ -5,7 +5,7 @@
       <div class="container-fluid sticky fixed-top " >
   
             <!--Start of logo -->
-            <h1 class="navbar-brand" routerLink=""><img src="/assets/images/tutLogo.png"> </h1> <P class = "center">TRACK REQUEST PAGE</P>
+            <h1 class="navbar-brand" routerLink=""><img src="/assets/images/tutLogo.png"> </h1> <P class = "center">STAFF FEEDBACK PAGE</P>
     
             <!--End of logo-->
       </div>
@@ -19,9 +19,10 @@
     <div class = "sideNav"> 
         <nav class = "breadcrumblink" aria-label="breadcrumb">
             <ol class="breadcrumb">
-              <li class="breadcrumb-item active" aria-current="page">Tracking</li>
+              <li class="breadcrumbNone" aria-current="page">Tracking</li>
             </ol>
-            <ol class="breadcrumbNone">
+           
+            <ol class=" breadcrumb-item active">
                 <li class="" >Feedback</li>
               </ol>
           </nav>
