--- a/src/app/pages/stafffeedback/stafffeedback.component.css
+++ b/src/app/pages/stafffeedback/stafffeedback.component.css
@@ -49,6 +49,7 @@ body {
 }
 
 .contentContainerRight {
+    
     width:1562px;
     height: 1055px;
     margin-left: 17.9%;
@@ -61,7 +62,7 @@ form {
     
     width: 1300px;
     margin: 5% 5%;
-    height: 900px;
+    height: 830px;
     background: #FFFFFF;
     mix-blend-mode: normal;
     border: 1px solid #969090;
@@ -69,6 +70,11 @@ form {
     border-radius: 10px;
 
 
+}
+
+.contentForm {
+        
+        margin-top: 7%;
 }
 .toptitle {
    
@@ -79,32 +85,138 @@ form {
     letter-spacing: 0.15em;
     background: #ECE7E7;
     width: 1110px;
+    height: 40px;
     margin:5% 6%;
     padding-left: 50px;
 }
 
 
-.breadcrumblink {
+.breadcrumbNav {
 
-    margin: 10% 50px;
-    padding: 10px;
+    
+    margin: 12% 10px;
+    padding: 20px 30px;
     
    
    
     
     
 }
+#breadcrumbpadding {
+
+    
+    padding: 10px 0;
+}
+
+ a {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 25px;
+    /* identical to box height */
+
+    letter-spacing: 0.035em;
+    text-transform: capitalize;
+
+    color: #005596;
+    text-decoration: none;
+ }
+
+ nav,ul {
+
+    list-style:none ;
+ }
 .breadcrumb-item.active {
    
-    list-style:none ;
+    
     border-bottom: 3px solid #005596;
     width: 70px;
     padding-left: 0;
     
 }
 
-.breadcrumbNone {
-    list-style:none ;
-    padding-left: 0;
 
+.color {
+    color: black;
+}
+.feedbackTopPara {
+
+    font-style: normal;
+    font-weight: 490;
+    font-size: 22px;
+    line-height: 30px;
+    letter-spacing: 0.06em;
+    border: 1px solid red;
+    width: 1110px;
+    margin: 0% 6%;
+    padding: 1.5%;
+
+}
+
+.radionBtn {
+
+    display: flex;
+    flex-direction:row;
+    margin: 1% 7.78%;
+    border: 1px solid red;
+
+}
+
+.form-check-input {
+    width: 20px;
+    height: 20px;
+    border: 4px solid #000000;
+    border-radius: 10px;
+
+}
+.form-check-label {
+
+    padding-top: 2px;
+}
+.form-check {
+    padding-left: 3.5%;
+}
+
+.descriptionTitle {
+
+    border: 1px solid red;
+    margin: 2% 35%;
+}
+
+textarea {
+    padding: 10px;
+    width: 60%;
+    margin-left: 20%;
+
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    letter-spacing: 0.06em;
+
+    border: 2px solid #000000;
+    border-radius: 10px;
+    
+}
+
+.descriptionTextarea {
+    border: 1px solid blue;
+}
+button {
+
+    width: 100px;
+    height: 45px;
+    background: #005596;
+    border: 1px solid #FFFFFF;
+    border-radius: 10px;
+    margin: 2% 45%;
+
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 25px;
+    letter-spacing: 0.06em;
+
+    color: #FFFFFF;
+   
 }
