--- a/src/app/pages/stafffeedback/stafffeedback.component.html
+++ b/src/app/pages/stafffeedback/stafffeedback.component.html
@@ -17,22 +17,63 @@
 
 <body>
     <div class = "sideNav"> 
-        <nav class = "breadcrumblink" aria-label="breadcrumb">
-            <ol class="breadcrumb">
-              <li class="breadcrumbNone" aria-current="page">Tracking</li>
-            </ol>
-           
-            <ol class=" breadcrumb-item active">
-                <li class="" >Feedback</li>
-              </ol>
-          </nav>
+        
+        <nav class="breadcrumbNav">
+            <ul >
+                <li class = "" id = "breadcrumbpadding"><a href = "#">Request</a></li>
+                <li class = "" id = "breadcrumbpadding"><a href="#">Tracking</a></li>
+                <li class = "breadcrumb-item active" id = "breadcrumbpadding"><a href="#">Feedback</a></li>
+
+                
+            </ul>
+            
+        </nav>
+        
     </div>
     <div class = "contentContainerRight">
             <form class="backFrom">
-                <h3 class = "toptitle">Staff Track Request</h3>
+                <div class = "contentForm">
 
+                    <h3 class = "toptitle">Staff Track Request</h3>
 
+                    <div class = "feedbackTopPara">
+                        <p class="">Thank you for taking your your time and give us feedback on the job we did for you.
+                            We promise to read your comments carefully. Hopefully we managed to solve your issues.</p>
+                    </div>
+               
+                    <div class="radionBtn">
+                        
+                        <div>
+                            <h5>Completed:</h5>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            
+                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                            <label class="form-check-label" for="inlineRadio1">No</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                            <label class="form-check-label" for="inlineRadio2">Yes</label>
+                        </div>
+
+                    </div>
+                
+                        <div class="descriptionTextarea">
+                            
+                            <h3 class="descriptionTitle" >Give your description below</h3>
+                            <textarea id = "description" rows="8" >Enter the feedback description
+                                
+                            </textarea>
+
+                        </div>
+
+                        <button>Send</button>
+
+                </div>
             </form>
     </div>
     
 </body>
+
+
+
