added adminassign task,admin view task,admin available technician

--- a/src/app/pages/availabletechnician/availabletechnician.component.html
+++ b/src/app/pages/availabletechnician/availabletechnician.component.html
@@ -5,7 +5,7 @@
       <div class="container-fluid sticky fixed-top " >
   
             <!--Start of logo -->
-            <h1 class="navbar-brand" routerLink=""><img src="/assets/images/tutLogo.png"> </h1> <P class = "center">ADMIN VIEW REQUESTS</P>
+            <h1 class="navbar-brand" routerLink=""><img src="/assets/images/tutLogo.png"> </h1> <P class = "center">ADMIN VIEW TECHNICIANS</P>
     
             <!--End of logo-->
       </div>
@@ -35,7 +35,7 @@
             <form class="backFrom">
                 <div class = "contentForm">
 
-                    <h3 class = "toptitle">Admin View requests</h3>
+                    <h3 class = "toptitle">Admin View technicians</h3>
 
                     <div class = "Cards">
 
@@ -50,7 +50,7 @@
                                     <div class="imgStaffInfo">
                                         <img src="/assets/images/icon _profile.png" >
                                         <p class="card-text">Palesa Mahlangue<br>Mahlanguup@gmail.com</p>
-                                        <button class = "btn1">View</button>
+                                        <a  href="#"><img class = "image" src="/assets/images/icon _send.png" ></a>
                                     </div>
                                     
                                 </div>
@@ -68,7 +68,7 @@
                                     <div class="imgStaffInfo">
                                         <img src="/assets/images/icon _profile.png" >
                                         <p class="card-text">thabelo livhimbi<br>LivhimbiT@gmail.com</p>
-                                        <button class = "btn1">View</button>
+                                        <a href="#"><img class = "image" src="/assets/images/icon _send.png"  ></a>
                                     </div>
                                     
                                 </div>
@@ -85,7 +85,7 @@
                                     <div class="imgStaffInfo">
                                         <img src="/assets/images/icon _profile.png" >
                                         <p class="card-text">Kabelo Malatji<br>KabeloK@gmail.com</p>
-                                        <button class = "btn1">View</button>
+                                        <a href="#"><img class = "image" src="/assets/images/icon _send.png" ></a>
                                     </div>
                                     
                                 </div>
@@ -97,4 +97,5 @@
             </form>
         </div>
 </body>
+
 
