added a service and subscribed

--- a/src/app/pages/availabletechnician/availabletechnician.component.html
+++ b/src/app/pages/availabletechnician/availabletechnician.component.html
@@ -43,8 +43,8 @@
                             <div class="card ">
                                 <div class="card-body">
                                     <div class="card-titles">
-                                        <h6 class="card-title">Ref:f14m56tg</h6>
-                                        <h6 class="card-title" id = "date">RequestDate</h6>
+                                        <h6 class="card-title"></h6>
+                                        <h6 class="card-title" id = "date"></h6>
                                     </div>
                                   
                                     <div class="imgStaffInfo">
