--- a/src/app/redirectPages/footer/footer.component.css
+++ b/src/app/redirectPages/footer/footer.component.css
@@ -4,7 +4,7 @@
     top: 100%;
     background: #005596;
     height: 42px;
-    margin: 238px 0;
+    margin: 33.13% 0;
     padding-top: 8px;
 }
 .center {
