--- a/src/app/pages/stafffeedback/stafffeedback.component.html
+++ b/src/app/pages/stafffeedback/stafffeedback.component.html
@@ -40,35 +40,39 @@
                         <p class="">Thank you for taking your your time and give us feedback on the job we did for you.
                             We promise to read your comments carefully. Hopefully we managed to solve your issues.</p>
                     </div>
-               
-                    <div class="radionBtn">
-                        
-                        <div>
-                            <h5>Completed:</h5>
-                        </div>
-                        <div class="form-check form-check-inline">
+                        <form #feedback = "ngForm" (ngSubmit)="submitResults(feedback)">
+                            <div class="radionBtn">
                             
-                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-                            <label class="form-check-label" for="inlineRadio1">No</label>
-                        </div>
-                        <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-                            <label class="form-check-label" for="inlineRadio2">Yes</label>
-                        </div>
-
-                    </div>
-                
-                        <div class="descriptionTextarea">
-                            
-                            <h3 class="descriptionTitle" >Give your description below</h3>
-                            <textarea id = "description" rows="8" >Enter the feedback description
+                                <div>
+                                    <h5>Completed:</h5>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"  value="option1" ngModel >
+                                    <label class="form-check-label" for="inlineRadio1">No</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"  value="option2" ngModel >
+                                    <label class="form-check-label" for="inlineRadio2">Yes</label>
+                                </div>
+    
+                            </div>
+                    
+                            <div class="descriptionTextarea">
                                 
-                            </textarea>
+                                <h3 class="descriptionTitle" >Give your description below</h3>
+                                <textarea  id = "description" rows="8" ngModel>
+                                    
+                                </textarea>
+    
+                            </div>
+    
+                            <button type="submit" value = "submit">Send</button>
+    
 
-                        </div>
-
-                        <button>Send</button>
-
+                        </form>
+                        
+                    
                 </div>
             </form>
     </div>
