--- a/src/app/pages/stafffeedback/stafffeedback.component.html
+++ b/src/app/pages/stafffeedback/stafffeedback.component.html
@@ -40,7 +40,7 @@
                         <p class="">Thank you for taking your your time and give us feedback on the job we did for you.
                             We promise to read your comments carefully. Hopefully we managed to solve your issues.</p>
                     </div>
-                        <form #feedback = "ngForm" (ngSubmit)="submitResults(feedback)">
+                        <form #feedback = "ngForm" (ngSubmit)="submitResults(feedback)" >
                             <div class="radionBtn">
                             
                                 <div>
@@ -48,11 +48,11 @@
                                 </div>
                                 <div class="form-check form-check-inline">
                                     
-                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"  value="option1" ngModel >
+                                    <input class="form-check-input" #name = "ngModel" type="radio" name="inlineRadioOptions" id="inlineRadio1"  value="NoRadioButton" ngModel >
                                     <label class="form-check-label" for="inlineRadio1">No</label>
                                 </div>
                                 <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"  value="option2" ngModel >
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"  value="YesRadioButton" ngModel >
                                     <label class="form-check-label" for="inlineRadio2">Yes</label>
                                 </div>
     
@@ -61,15 +61,15 @@
                             <div class="descriptionTextarea">
                                 
                                 <h3 class="descriptionTitle" >Give your description below</h3>
-                                <textarea  id = "description" rows="8" ngModel>
+                                <textarea  id = "description" rows="8" ngModel name = "description" placeholder="Enter the description of the feedback">
                                     
                                 </textarea>
-    
+                                
                             </div>
     
                             <button type="submit" value = "submit">Send</button>
-    
-
+            
+                            
                         </form>
                         
                     
