--- a/helpdeskk/src/app/adminpage/adminpage.component.html
+++ b/helpdeskk/src/app/adminpage/adminpage.component.html
@@ -12,10 +12,10 @@
             <i class="fas fa-bars"></i>
         </div>
         <ul>
-        <li>
-            <a href = "#"class="nav-link active" id="ModalExample" >LOGOUT</a>
-          </li>
-        </ul>
+            <li>
+                <a href = "#"class="nav-link active" id="ModalExample" ><button type="button" class="btn btn-success">LOGOUT</button></a>
+              </li>
+            </ul>
     </NAv>
 </div>
 
