--- a/helpdeskk/src/app/form/form.component.html
+++ b/helpdeskk/src/app/form/form.component.html
@@ -25,7 +25,7 @@
         
   
           <div class="mb-3 row mx-0 justify-content-center">
-            <button type="submit" class="btn btn-primary px-3 rounded-3" (click)="staff_login()" routerLink="read">
+            <button type="submit" class="btn btn-primary px-3 rounded-3" (click)="staff_login()" >
               Submit
             </button>
           </div>
