trying to split data from api

--- a/src/app/pages/stafffeedback/stafffeedback.component.html
+++ b/src/app/pages/stafffeedback/stafffeedback.component.html
@@ -71,6 +71,10 @@
             
                             
                         </form>
+                        <div *ngFor = "let data of array ">
+                            <p>{{data}}</p>
+
+                        </div>
                         
                     
                 </div>
