added service in tech comp

--- a/src/app/pages/technician-view-task/technician-view-task.component.html
+++ b/src/app/pages/technician-view-task/technician-view-task.component.html
@@ -38,7 +38,7 @@
                 <div class = "myTable">
                     <table class="table table-bordered">
                         <thead>
-                          <tr>
+                          <tr *ngFor = "let data of fetchedTechTaskData ">
                             <th scope="col">Name</th>
                             <th scope="col">Category</th>
                             <th scope="col">Description</th>
