added a post method on the stafffeedback

--- a/src/app/pages/track-request/track-request.component.html
+++ b/src/app/pages/track-request/track-request.component.html
@@ -31,7 +31,11 @@
     <div class = "contentContainerRight">
             <form class="backFrom">
                 <h3 class = "toptitle">Staff Track Request</h3>
+                <table>
+                    <tr *ngFor = "let request of dataFetched">
 
+                    </tr>
+                </table>
 
             </form>
     </div>
