--- a/src/app/pages/stafffeedback/stafffeedback.component.html
+++ b/src/app/pages/stafffeedback/stafffeedback.component.html
@@ -48,11 +48,11 @@
                                 </div>
                                 <div class="form-check form-check-inline">
                                     
-                                    <input class="form-check-input" #name = "ngModel" type="radio" name="inlineRadioOptions" id="inlineRadio1"  value="NoRadioButton" ngModel >
+                                    <input class="form-check-input" #name = "ngModel" type="radio" name="inlineRadioOptions" id="inlineRadio1"  value="No" ngModel >
                                     <label class="form-check-label" for="inlineRadio1">No</label>
                                 </div>
                                 <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"  value="YesRadioButton" ngModel >
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"  value="Yes" ngModel >
                                     <label class="form-check-label" for="inlineRadio2">Yes</label>
                                 </div>
     
