--- a/helpdeskk/src/app/login/login.component.html
+++ b/helpdeskk/src/app/login/login.component.html
@@ -33,7 +33,7 @@
         
   
           <div class="mb-3 row mx-0 justify-content-center">
-            <button type="submit" class="btn btn-primary px-3 rounded-3" (click)="admin_login()" routerLink="adminpage" >
+            <button type="submit" class="btn btn-primary px-3 rounded-3" (click)="admin_login()" >
               Submit
             </button>
           </div>
