--- a/helpdeskk/src/app/adminpage/adminpage.component.html
+++ b/helpdeskk/src/app/adminpage/adminpage.component.html
@@ -13,7 +13,7 @@
         </div>
         <ul>
             <li>
-                <a href = "#"class="nav-link active" id="ModalExample" ><button type="button" class="btn btn-success">LOGOUT</button></a>
+                <a href = "#"class="nav-link active" id="ModalExample" ><button type="button" class="btn btn-success"  >LOGOUT</button></a>
               </li>
             </ul>
     </NAv>
@@ -111,7 +111,7 @@
                                 </div>
                             </div>
                             <div class="action justify-content-end mt-2">
-                                <button class="btn bg-secondary" style="height: 3rem; width: 5.5rem;" routerLink="viewrequest">View</button>
+                                <button class="btn bg-secondary" style="height: 3rem; width: 5.5rem;" [routerLink]="['/viewrequest']">View</button>
                             </div>
                         </div>
                     </div>
