--- a/helpdeskk/src/app/adminpage/adminpage.component.html
+++ b/helpdeskk/src/app/adminpage/adminpage.component.html
@@ -13,7 +13,7 @@
         </div>
         <ul>
             <li>
-                <a href = "#"class="nav-link active" id="ModalExample" ><button type="button" class="btn btn-success"  >LOGOUT</button></a>
+                <a href = "#" (click)="logout()" class="nav-link active" id="ModalExample" ><button type="button" class="btn btn-success"  >LOGOUT</button></a>
               </li>
             </ul>
     </NAv>
