--- a/src/app/pages/track-request/track-request.component.html
+++ b/src/app/pages/track-request/track-request.component.html
@@ -36,7 +36,19 @@
 
                     </tr>
                 </table>
+                <div class = "container">
+                        <label for="zero" id="red">Todo</label>
+                        <label for="fifty" id="amber">InProgress</label>
+                        <label for="zero" id="gray">OnHold</label>
+                        <label for="hundred" id="green">Done</label>
+                        <div class="progress">
+                                <div class="progressBar">
 
+                                </div>
+                        </div>
+                    
+
+                </div>
             </form>
     </div>
 
